Add Loading Page and Fonts

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,8 +1,7 @@
-$app-black: rgb(22, 24, 22);
+$app-black: rgb(14, 21, 50);
 $app-gray: rgb(231, 231, 233);
-$app-gray-dark: rgb(175, 169, 169);
-$app-green: rgb(130, 152, 64);
-$app-blue: rgb(10, 118, 205);
+$app-green: rgb(53, 206, 114);
+$app-blue: rgb(39, 57, 103);
 $app-white: rgb(255, 254, 254);
 $app-red: rgb(219, 71, 71);
 
@@ -12,11 +11,11 @@ $padding-single: 16px;
 $padding-half: 8px;
 $padding-container: 2.5%;
 
-$font-headers: 'Libre Baskerville', serif;
-$font-body: 'Roboto', sans-serif;
+$font-headers: 'Montserrat', sans-serif;
+$font-body: 'Open Sans', sans-serif;
 
 $mobile-width: 425px;
 $tablet-width: 700px;
 $desktop-width: 1024px;
 
-$border-radius: 5px
+$border-radius: 5px;
