--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -9,7 +9,7 @@ $max-width: 950px;
 $padding-double: 32px;
 $padding-single: 16px;
 $padding-half: 8px;
-$padding-container: 2.5%;
+$padding-container: 17px;
 
 $font-headers: 'Montserrat', sans-serif;
 $font-body: 'Open Sans', sans-serif;
