--- a/src/Components/Blocks/Button/Button.scss
+++ b/src/Components/Blocks/Button/Button.scss
@@ -4,6 +4,7 @@
   border-radius: $border-radius;
   color: $app-black;
   cursor: pointer;
+  display: inline-block;
   font: inherit;
   padding: {
     bottom: $padding-half;
@@ -11,4 +12,6 @@
     right: $padding-single;
     top: $padding-half;
   }
+  text-align: center;
+  text-decoration: none;
 }
