--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,5 +1,6 @@
 $app-black: rgb(14, 21, 50);
 $app-gray: rgb(231, 231, 233);
+$app-yellow: rgb(207, 159, 53);
 $app-green: rgb(53, 206, 114);
 $app-blue: rgb(39, 57, 103);
 $app-white: rgb(255, 254, 254);
