--- a/src/Components/Routes/Employees/EmployeesAdd/components/EmployeesAddResults/EmployeesAddResults.scss
+++ b/src/Components/Routes/Employees/EmployeesAdd/components/EmployeesAddResults/EmployeesAddResults.scss
@@ -27,6 +27,7 @@
   border-radius: $border-radius;
   display: flex;
   justify-content: space-between;
+  margin-top: $padding-half;
   padding: $padding-single;
 }
 
