--- a/src/Components/Routes/Home/components/HomeLocks/HomeLocks.scss
+++ b/src/Components/Routes/Home/components/HomeLocks/HomeLocks.scss
@@ -5,7 +5,7 @@
   }
   max-width: $max-width;
   padding: {
-    bottom: $padding-single;
+    bottom: 2 * $padding-double;
     left: $padding-container;
     right: $padding-container;
     top: $padding-single;
