Small Styling fixes

--- a/src/Components/Routes/Home/components/HomeLocks/HomeLocks.scss
+++ b/src/Components/Routes/Home/components/HomeLocks/HomeLocks.scss
@@ -52,6 +52,13 @@
   }
 
   .row {
+    @include mobile-small {
+      flex-direction: column;
+
+      > * {
+        margin-bottom: $padding-half;
+      }
+    }
     align-items: center;
     display: flex;
     flex-wrap: wrap;
